Update LinkedIn profile

--- a/css/style.css
+++ b/css/style.css
@@ -1247,7 +1247,7 @@ ul.portfolio-image li .desc {
   background: #d8d8d8;
 }
 .linkedin a:after {
-  background: #37b5e7;
+  background: #0077b5;
 }
 
 .footer-bottom {
